k8s-yamls-master/k8s-yamls-master/live/aks-aks-prd-westus2-001/demoapp/1-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
# ---
# #default deny network policy
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
  # name: default-deny
  # namespace: demo
# spec:
  # podSelector: {}
