k8s-yamls-master/k8s-yamls-master/live/aks-aks-prd-westus2-001/demoapp/vote.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
  # name: demo
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front-service
  namespace: demo
  annotations:
    # service.beta.kubernetes.io/azure-load-balancer-internal: "true" # Right now PLS must be used with internal LB
    # service.beta.kubernetes.io/azure-pls-create: "true"
    # service.beta.kubernetes.io/azure-pls-name: myServicePLS 
    # service.beta.kubernetes.io/azure-pls-ip-configuration-subnet: "<subnet name>" # Private Link subnet name
    # service.beta.kubernetes.io/azure-pls-ip-configuration-ip-address-count: "1"
    # service.beta.kubernetes.io/azure-pls-proxy-protocol: "false"
    # service.beta.kubernetes.io/azure-pls-visibility: "*"
    # service.beta.kubernetes.io/azure-pls-auto-approval: "<subscription ip>"
spec:
  type: ClusterIP
  selector:
    app: azure-vote-front
  ports:
    - name: azure-vote-front-port
      protocol: TCP
      port: 80
      targetPort: 80
# ---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
  # name: azure-vote-back
  # namespace: demo
# spec:
  # podSelector:
    # matchLabels:
      # app: azure-vote-back
  # ingress:
  # - from:
    # - podSelector:
        # matchLabels:
          # app: azure-vote-front
    # ports:
    # - port: 6379
# ---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
  # name: default-deny
  # namespace: demo
# spec:
  # podSelector:
    # matchLabels: {}
  # policyTypes:
  # - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-front-deployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-front
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: azure-vote-front
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: azure-vote-front
        image: mcr.microsoft.com/azuredocs/azure-vote-front:v1
        # image: docker-local.artifactory.medimpact.com/systems/smsupdater:1.0.2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
  namespace: demo
spec:
  ports:
  - port: 6379
  selector:
    app: azure-vote-back
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-vote-back
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-vote-back
  template:
    metadata:
      labels:
        app: azure-vote-back
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: azure-vote-back
        image: mcr.microsoft.com/oss/bitnami/redis:6.0.8
        ports:
        - containerPort: 6379
          name: redis
